[package]
name = "p12-keystore"
description = "Convenient API to work with PKCS#12 files"
version = "0.3.0-rc1"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ancwrd1/p12-keystore"
documentation = "https://docs.rs/p12-keystore"
readme = "README.md"
keywords = ["pkcs12", "pfx", "keystore", "truststore"]
edition = "2024"

[features]
default = ["pbes1"]
pbes1 = ["dep:cbc", "dep:rc2", "dep:des"]

[dependencies]
pkcs5 = { version = "0.8.0-rc.13", features = ["alloc", "pbes2"] }
pkcs8 = "0.11.0-rc.10"
pkcs12 = { version = "0.2.0-pre.0", features = ["kdf"] }
cms = "0.3.0-pre.1"
der = { version = "0.8.0-rc.10", features = ["std", "derive"] }
thiserror = "2"
cbc = { version = "0.2.0-rc.2", features = ["block-padding", "alloc"], optional = true }
rc2 = { version = "0.9.0-rc.0", optional = true }
des = { version = "0.9.0-rc.2", optional = true }
sha1 = "0.11.0-rc.3"
sha2 = "0.11.0-rc.3"
x509-parser = "0.18"
hex = "0.4"
hmac = "0.13.0-rc.3"
rand = "0.9"

[dev-dependencies]
base64 = "0.22.1"
